name:                zonemaker
version:             0.1.0.0
synopsis:            SmartOS Zone Maker
homepage:            http://blog.alainodea.com/
license:             Apache-2.0
license-file:        LICENSE
author:              Alain O'Dea
maintainer:          alain.odea@gmail.com
category:            Library
build-type:          Simple
cabal-version:       >=1.8

executable zonemaker
  extensions: GeneralizedNewtypeDeriving
            , MultiParamTypeClasses
            , OverloadedStrings
            , TypeFamilies
            , TypeSynonymInstances
            , OverloadedStrings
            , ExtendedDefaultRules
  main-is:
    Main.hs
  build-depends: base ==4.6.*
               , bytestring ==0.10.*
               , text ==0.11.*
               , aeson ==0.7.*
               , network ==2.4.*
